# cs-summer-equity-trading-system

./: .gitignore  DEVELOPERS.md  Makefile  README.md  cluster_down.sh  cluster_up.sh  compiled-docker-compose.yml  k3s_manager.sh  locust_reload.sh  logs_down.sh  logs_up.sh  run_logging.ps1
.github/workflows/: build-publish.yaml  cluster-test.yaml
api/: .dockerignore  README.md  pyproject.toml
api/app/: main.py
api/tests/: test_auth.py
backend/DB/: compose.yaml  (+1 more)
backend/DB/redis-postgres-syncers/: .gitignore  Cargo.toml  Containerfile.db-syncer  Containerfile.trade-writer  compose.yaml  init.sql
backend/DB/redis-postgres-syncers/src/: db-syncer.rs  redis-populator.rs  trade-writer.rs
backend/DB/redis-postgres-syncers/test/: accounts.py  make_fake_accounts.py  make_fake_positions.py  make_fake_users.py  positions.py  send_fake_trades.py  test_all.py  trades.py
db/: README.md  compose.yaml  init.sql
frontend/: Dockerfile  accounts_pages.py  api_client.py  app_ui.py  positions_pages.py
k8s/: .gitignore  Dockerfile.toolbox  README.md  SETUP.md  compose.yml  custom-resolv.conf  k3d-config.yaml
locust/: README.md  locustfile.py
make/: .gitignore  chaos.mk  cluster.mk  db.mk  debug.mk  images.mk  k3s.mk  logs.mk  shell.mk  status.mk
web-ui/: .dockerignore  Dockerfile  README.md  account_picker.py  accounts_pages.py  api_client.py  app_ui.py  auth_pages.py  auth_state.py  enter_trade_page.py  market_data.py  mass_trade_page.py  persistent_login.py  positions_grid.py  positions_pages.py  pyproject.toml  theme.py  trade_history_pages.py  trades_grid.py
(+208 files in other folders)
