[package]
name = "redis-postgres-syncers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trade-writer"
path = "src/trade-writer.rs"

[[bin]]
name = "db-syncer"
path = "src/db-syncer.rs"

[dependencies]
bytes = "1.11"
dotenvy = "0.15"
futures-util = "0.3"
jiff = "0.2"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tokio-postgres = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = "0.3"
